--- a/about.html
+++ b/about.html
@@ -63,12 +63,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="text">We only have what we give... <a href="#" class="donate-box-btn">Donate Now.</a></div>
+                        <div class="text">Want to Make a Change?<a href="#" class="donate-box-btn">Donate Now.</a></div>
                     </div>
                     <div class="right-content">
                         <ul class="contact-info">
-                            <li><span class="flaticon-mail"></span><a href="mailto:support@charity.com">support@charity.com</a></li>
-                            <li><span class="flaticon-phone"></span><a href="tel:+211456789">+211 456 789</a></li>
+                            <li><span class="flaticon-mail"></span><a href="mailto:support@charity.com">healafricanorphanscharity@gmail.com</a></li>
+                            <li><span class="flaticon-phone"></span><a href="tel:+256707394144"></a></li>
                         </ul>
                         <ul class="social-icon-one">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -98,61 +98,11 @@
                                     
                                     <div class="collapse navbar-collapse">
                                         <ul class="navigation">
-                                            <li class="dropdown"><a href="index-2.html">Home</a>
-                                                <ul>
-                                                    <li><a href="index-2.html">Main Home</a></li>
-                                                    <li><a href="index-3.html">Volunteer Home</a></li>
-                                                    <li><a href="index-4.html">Charity Home</a></li>
-                                                    <li><a href="index-5.html">Ecology Home</a></li>
-                                                    <li><a href="index-6.html">Education Home</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown current"><a href="#">Pages</a>
-                                                <ul>
-                                                    <li><a href="about.html">About Us</a></li>
-                                                    <li><a href="faq.html">FAQ’s</a></li>
-                                                    <li><a href="team.html">Meet Our Team</a></li>
-                                                    <li class="dropdown"><a href="#">Portfolio</a>
-                                                        <ul>
-                                                            <li><a href="portfolio-1.html">Style 01 - Grid View</a></li>
-                                                            <li><a href="portfolio-2.html">Style 02 - Grid View</a></li>
-                                                            <li><a href="portfolio-3.html">Style 01 - Masonry View</a></li>
-                                                            <li><a href="portfolio-4.html">Style 02 - Masonry View</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="dropdown"><a href="#">Shop</a>
-                                                        <ul>
-                                                            <li><a href="shop.html">Our Products</a></li>
-                                                            <li><a href="shop-single.html">Products Single</a></li>
-                                                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                                            <li><a href="checkout.html">Checkout</a></li>
-                                                            <li><a href="account.html">My Account</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Causes</a>
-                                                <ul>
-                                                    <li><a href="causes-1.html">Style 01 - Grid View</a></li>
-                                                    <li><a href="causes-2.html">Style 02 - List View</a></li>
-                                                    <li><a href="causes-3.html">Style 01 - Carousel</a></li>
-                                                    <li><a href="cause-details.html">Single Cause</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Events</a>
-                                                <ul>
-                                                    <li><a href="events-1.html">Events</a></li>
-                                                    <li><a href="event-details.html">Single Event</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Blog</a>
-                                                <ul>
-                                                    <li><a href="blog.html">Classic Grid View</a></li>
-                                                    <li><a href="blog-fullwidth.html">Fullwidth Masonry</a></li>
-                                                    <li><a href="blog-list.html">List With Sidebar</a></li>
-                                                    <li><a href="blog-details.html">Single Post</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="index.html">Home</a></li>
+                                            <li><a href="about.html">About Us</a></li>
+                                            <li><a href="causes-2.html">Causes</a></li>
+                                            <li><a href="events-1.html">Events</a></li>
+                                            <li class="dropdown"><a href="blog.html">Blog</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
@@ -333,11 +283,15 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
-                        <h4>With more than <span>3,900 staff of 50 nationalities,</span> Concern operates in 25 of the world’s poor countries, helping people to achieve major in their lives.</h4>
+                        <h4>With more than <span>3,900 staff of 50 nationalities,</span>Heal African Orphans Charity is a charity organization registered as an NGO working in Uganda, dedicated for delivering humanitarian work to the most impoverished, needy and marginalized people through food aid, water, livelihood, education, health care etc.
+                            Heal African orphan’s charity Uganda is a Non-Government organization that was established in 2009 by a Dr.MAFABI ADI and the agroup of integrity/principled faithful people who saw the need to associate freely and serve the interest of the most vulnerable people by addressing plight of vulnerable communities in their underserved communities.</h4>
                     </div>
                     <div class="col-lg-6">
-                        <h3>More than 32 years experience </h3>
-                        <div class="text">Beguiled and demoralized by the charms of pleasure of the moment, so by desire, that they cannot foresee the pain and trouble that are bound to ensue   to those who fail in their shrinking.</div>
+                        <h3>More than 10 years experience </h3>
+                        <div class="text">Heal African orphan’s charity registered as a non-government organization with the government of Uganda with Registration number (NCD/027/2023)
+                            It was in the principles and values of Islam to serve the interest of the most vulnerable people regardless of color, race, religion, creed and tribes.
+                            
+                            The organization was majorly formed mainly on improving the social-economic life of rural community people through development in various aspects or self reliance an empowerment especially for children, woman and any other disadvantaged people.</div>
                     </div>
                 </div>
             </div> 
@@ -359,31 +313,13 @@
                         <div class="swiper-slide">
                             <div class="image">
                                 <img src="images/resource/image-17.jpg" alt="">
-                                <div class="year">2011</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="image">
-                                <img src="images/resource/image-15.jpg" alt="">
-                                <div class="year">2013</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="image">
-                                <img src="images/resource/image-16.jpg" alt="">
                                 <div class="year">2015</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="image">
-                                <img src="images/resource/image-17.jpg" alt="">
-                                <div class="year">2017</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="image">
                                 <img src="images/resource/image-15.jpg" alt="">
-                                <div class="year">2018</div>
+                                <div class="year">2017</div>
                             </div>
                         </div>
                         <div class="swiper-slide">
@@ -409,27 +345,19 @@
                             <div class="text">In the year of 2010,  <br>Heal African Orphans Charity was recognized by the community and how it was helping improve<br> the life of the poor people.</div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
+                            <div class="text">In the year of 2015,<br> Heal African Orphans<br> grew to over 100 volunteers</div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
+                            <div class="text">In the year 2017,<br>Heal African Orphans Charity <br>got a District Award for promoting good and creating Change</div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
+                            <div class="text">In the year 2019,<br> Heal African orphans Charity <br>became part of Women's Rights</div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="text">In the summer of 1980, Jonathan, Richard, Mark and Craig <br>met to discuss how they could use their skills to raise money to the  daily <br>life of the poor people.</div>
+                            <div class="text">In the year of 2021 <br>Heal African orphans Charity <br>became a Global volunteer</div>
                         </div>
                     </div>
+
                     <div class="swiper-nav-button">
                         <!-- Add Arrows -->
                         <div class="swiper-button-next"><i class="flaticon-next"></i></div>
@@ -512,7 +440,7 @@
                         <div class="contact-info-two">
                             <h5>Need assitant for <br>join with us?</h5>
                             <div class="icon-box"><span class="flaticon-phone-1"></span></div>
-                            <div class="phone-number"><a href="tel:+2114567890">+211 456 7890</a></div>
+                            <div class="phone-number"><a href="tel:+256707394144">+256707394144</a></div>
                         </div>
                         <div class="logo-box"><div class="image wow zoomIn" data-wow-delay="500ms"><img src="images/resource/logo-icon.png" alt=""></div></div>
                         <div class="video-box"><img src="images/resource/image-19.jpg" alt=""><a href="https://www.youtube.com/watch?v=nfP5N9Yc72A&amp;t=28s" class="overlay-link lightbox-image video-fancybox video-btn"><span class="flaticon-multimedia-1"></span></a></div>
@@ -610,10 +538,10 @@
                     <div class="col-lg-3 col-md-6 contact-widget footer-widget">
                         <h4 class="widget-title">Contact</h4>
                         <ul>
-                            <li>5404 Berrick Street, <br> 2nd cross, <br>Boston, MA 02115.</li>
-                            <li><a href="mailto:support@goodsoul.com">supportyou@goodsoul.com </a></li>
+                            <li>Kampala Rd, <br> Mbale City, <br>Uganda.</li>
+                            <li><a href="mailto:healafricanorphanscharity@gmail.com">healafricanorphanscharity@gmail.com</a></li>
                         </ul>   
-                        <h3><a href="tel:+211456789">+211 456 789</a></h3>                 
+                        <h3><a href="tel:+211456789">+256707394144</a></h3>                 
                     </div>
                     <!-- About Widget -->
                     <div class="col-lg-3 col-md-6 about-widget footer-widget">
