--- a/causes-2.html
+++ b/causes-2.html
@@ -63,12 +63,12 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="text">We only have what we give... <a href="#" class="donate-box-btn">Donate Now.</a></div>
+                        <div class="text">Want to Make a Change? <a href="#" class="donate-box-btn">Donate Now.</a></div>
                     </div>
                     <div class="right-content">
                         <ul class="contact-info">
-                            <li><span class="flaticon-mail"></span><a href="mailto:support@charity.com">support@charity.com</a></li>
-                            <li><span class="flaticon-phone"></span><a href="tel:+211456789">+211 456 789</a></li>
+                            <li><span class="flaticon-mail"></span><a href="mailto:support@charity.com">healafricanorphanscharity@gmail.com</a></li>
+                            <li><span class="flaticon-phone"></span><a href="tel:+211456789">+256 70739 4144</a></li>
                         </ul>
                         <ul class="social-icon-one">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -98,61 +98,11 @@
                                     
                                     <div class="collapse navbar-collapse">
                                         <ul class="navigation">
-                                            <li class="dropdown"><a href="index-2.html">Home</a>
-                                                <ul>
-                                                    <li><a href="index-2.html">Main Home</a></li>
-                                                    <li><a href="index-3.html">Volunteer Home</a></li>
-                                                    <li><a href="index-4.html">Charity Home</a></li>
-                                                    <li><a href="index-5.html">Ecology Home</a></li>
-                                                    <li><a href="index-6.html">Education Home</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Pages</a>
-                                                <ul>
-                                                    <li><a href="about.html">About Us</a></li>
-                                                    <li><a href="faq.html">FAQ’s</a></li>
-                                                    <li><a href="team.html">Meet Our Team</a></li>
-                                                    <li class="dropdown"><a href="#">Portfolio</a>
-                                                        <ul>
-                                                            <li><a href="portfolio-1.html">Style 01 - Grid View</a></li>
-                                                            <li><a href="portfolio-2.html">Style 02 - Grid View</a></li>
-                                                            <li><a href="portfolio-3.html">Style 01 - Masonry View</a></li>
-                                                            <li><a href="portfolio-4.html">Style 02 - Masonry View</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="dropdown"><a href="#">Shop</a>
-                                                        <ul>
-                                                            <li><a href="shop.html">Our Products</a></li>
-                                                            <li><a href="shop-single.html">Products Single</a></li>
-                                                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                                            <li><a href="checkout.html">Checkout</a></li>
-                                                            <li><a href="account.html">My Account</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown current"><a href="#">Causes</a>
-                                                <ul>
-                                                    <li><a href="causes-1.html">Style 01 - Grid View</a></li>
-                                                    <li><a href="causes-2.html">Style 02 - List View</a></li>
-                                                    <li><a href="causes-3.html">Style 01 - Carousel</a></li>
-                                                    <li><a href="cause-details.html">Single Cause</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Events</a>
-                                                <ul>
-                                                    <li><a href="events-1.html">Events</a></li>
-                                                    <li><a href="event-details.html">Single Event</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Blog</a>
-                                                <ul>
-                                                    <li><a href="blog.html">Classic Grid View</a></li>
-                                                    <li><a href="blog-fullwidth.html">Fullwidth Masonry</a></li>
-                                                    <li><a href="blog-list.html">List With Sidebar</a></li>
-                                                    <li><a href="blog-details.html">Single Post</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="index-2.html">Home</a></li>
+                                            <li><a href="about.html">About US</a></li>
+                                            <li><a href="causes-2.html">Causes</a></li>
+                                            <li><a href="events-1.html">Events</a></li>
+                                            <li><a href="blog.html">Blog</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
@@ -347,7 +297,7 @@
                                 </div>
                             </div>
                             <div class="content">
-                                <h4><a href="cause-details.html">Make somalians happy</a></h4>
+                                <h4><a href="cause-details.html">Extend help to Orphans</a></h4>
                                 <div class="text">Foresee the pain and trouble that bound <br>to ensue and equal blame </div>
                                 <ul class="info-box">
                                     <li><a href="#"><span>Raised:</span> <br>$72000</a></li>
@@ -378,8 +328,8 @@
                                 </div>
                             </div>
                             <div class="content">
-                                <h4><a href="cause-details.html">Make somalians happy</a></h4>
-                                <div class="text">Foresee the pain and trouble that bound <br>to ensue and equal blame </div>
+                                <h4><a href="cause-details.html">Let's Provide Clean Water</a></h4>
+                                <div class="text">Let's Come together and  <br>provide clean safe Water to People</div>
                                 <ul class="info-box">
                                     <li><a href="#"><span>Raised:</span> <br>$72000</a></li>
                                     <li><a href="#"><span>Goal:</span> <br>$100000</a></li>
@@ -409,8 +359,8 @@
                                 </div>
                             </div>
                             <div class="content">
-                                <h4><a href="cause-details.html">Make somalians happy</a></h4>
-                                <div class="text">Foresee the pain and trouble that bound <br>to ensue and equal blame </div>
+                                <h4><a href="cause-details.html">Let's Fight Hunger in Africa</a></h4>
+                                <div class="text">Let's Donate and reduce the <br>number of children dieng from hunger</div>
                                 <ul class="info-box">
                                     <li><a href="#"><span>Raised:</span> <br>$72000</a></li>
                                     <li><a href="#"><span>Goal:</span> <br>$100000</a></li>
@@ -471,8 +421,8 @@
                                 </div>
                             </div>
                             <div class="content">
-                                <h4><a href="cause-details.html">Make somalians happy</a></h4>
-                                <div class="text">Foresee the pain and trouble that bound <br>to ensue and equal blame </div>
+                                <h4><a href="cause-details.html">Let's Promote Religion</a></h4>
+                                <div class="text">Fund Raise for the contruction <br>of More Mosques and promote Religion</div>
                                 <ul class="info-box">
                                     <li><a href="#"><span>Raised:</span> <br>$72000</a></li>
                                     <li><a href="#"><span>Goal:</span> <br>$100000</a></li>
