--- a/contact.html
+++ b/contact.html
@@ -99,63 +99,12 @@
                                     
                                     <div class="collapse navbar-collapse">
                                         <ul class="navigation">
-                                            <li class="dropdown"><a href="index-2.html">Home</a>
-                                                <ul>
-                                                    <li><a href="index-2.html">Main Home</a></li>
-                                                    <li><a href="index-3.html">Volunteer Home</a></li>
-                                                    <li><a href="index-4.html">Charity Home</a></li>
-                                                    <li><a href="index-5.html">Ecology Home</a></li>
-                                                    <li><a href="index-6.html">Education Home</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Pages</a>
-                                                <ul>
-                                                    <li><a href="about.html">About Us</a></li>
-                                                    <li><a href="faq.html">FAQ’s</a></li>
-                                                    <li><a href="team.html">Meet Our Team</a></li>
-                                                    <li class="dropdown"><a href="#">Portfolio</a>
-                                                        <ul>
-                                                            <li><a href="portfolio-1.html">Style 01 - Grid View</a></li>
-                                                            <li><a href="portfolio-2.html">Style 02 - Grid View</a></li>
-                                                            <li><a href="portfolio-3.html">Style 01 - Masonry View</a></li>
-                                                            <li><a href="portfolio-4.html">Style 02 - Masonry View</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="dropdown"><a href="#">Shop</a>
-                                                        <ul>
-                                                            <li><a href="shop.html">Our Products</a></li>
-                                                            <li><a href="shop-single.html">Products Single</a></li>
-                                                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                                            <li><a href="checkout.html">Checkout</a></li>
-                                                            <li><a href="account.html">My Account</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Causes</a>
-                                                <ul>
-                                                    <li><a href="causes-1.html">Style 01 - Grid View</a></li>
-                                                    <li><a href="causes-2.html">Style 02 - List View</a></li>
-                                                    <li><a href="causes-3.html">Style 01 - Carousel</a></li>
-                                                    <li><a href="cause-details.html">Single Cause</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Events</a>
-                                                <ul>
-                                                    <li><a href="events-1.html">Events</a></li>
-                                                    <li><a href="event-details.html">Single Event</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Blog</a>
-                                                <ul>
-                                                    <li><a href="blog.html">Classic Grid View</a></li>
-                                                    <li><a href="blog-fullwidth.html">Fullwidth Masonry</a></li>
-                                                    <li><a href="blog-list.html">List With Sidebar</a></li>
-                                                    <li><a href="blog-details.html">Single Post</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="current"><a href="contact.html">Contact</a></li>
-                                        </ul>
+                                            <li><a href="index-2.html">Home</a></li>
+                                            <li><a href="about.html">About Us</a></li>
+                                            <li><a href="causes-2.html">Causes</a></li>
+                                            <li><a href="events-1.html">Events</a></li>
+                                            <li><a href="blog.html">Blog</a></li>
+                                            <li><a href="contact.html">Contact</a></li>
                                     </div>
                                 </nav><!-- Main Menu End-->
                             </div>
@@ -374,15 +323,15 @@
                 <div class="col-lg-4">
                     <div class="contact-info-three">
                         <div class="single-info">
-                            <h4>Global HQ</h4>
-                            <div class="text">5404 Berrick Street, 2nd cross str, Boston, MA 02115.</div>
+                            <h4>Heal African Orphans Mbale</h4>
+                            <div class="text">Kampala Rd, Mbale City, Uganda</div>
                             <a class="link-btn" href="#">Your Nearest Location</a>                            
                         </div>
                         <div class="single-info">
                             <h4>Quick Contact</h4>
                             <div class="wrapper-box">
-                                <a href="mailto:supportyou@goodsoul.co">supportyou@goodsoul.com </a> <br>
-                                <a href="tel:+211456789123">+211 456 789 & 123</a>
+                                <a href="healafricanorphanscharity@gmail.com">healafricanorphanscharity@gmail.com </a> <br>
+                                <a href="tel:+256777552372">+256777552372</a>
                             </div>
                             <a class="link-btn" href="#">Get Call Back</a>
                         </div>
@@ -401,7 +350,7 @@
             data-lng="144.955631"
             data-type="roadmap"
             data-hue="#ffc400"
-            data-title="East Newyork"
+            data-title="Kampala Road, Mbale City, Uganda"
             data-icon-path="images/icons/map-marker.png"
             data-content="<p>P. B: 222. Mid Corner Street, 11201 <br> +224 620 63 09 00 & 11 <br> supportyou@jexixteam.com</p>">
         </div>
@@ -416,10 +365,10 @@
                     <div class="col-lg-3 col-md-6 contact-widget footer-widget">
                         <h4 class="widget-title">Contact</h4>
                         <ul>
-                            <li>5404 Berrick Street, <br> 2nd cross, <br>Boston, MA 02115.</li>
-                            <li><a href="mailto:support@goodsoul.com">supportyou@goodsoul.com </a></li>
+                            <li>Kampala Rd ,Mbale City<br>Uganda.</li>
+                            <li><a href="mailto:healafricanorphanscharity@gmail.com">healafricanorphanscharity@gmail.com</a></li>
                         </ul>   
-                        <h3><a href="tel:+211456789">+211 456 789</a></h3>                 
+                        <h3><a href="tel:+211456789">+256777552372</a></h3>                 
                     </div>
                     <!-- About Widget -->
                     <div class="col-lg-3 col-md-6 about-widget footer-widget">
