--- a/events-1.html
+++ b/events-1.html
@@ -98,61 +98,11 @@
                                     
                                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                         <ul class="navigation">
-                                            <li class="dropdown"><a href="index-2.html">Home</a>
-                                                <ul>
-                                                    <li><a href="index-2.html">Main Home</a></li>
-                                                    <li><a href="index-3.html">Volunteer Home</a></li>
-                                                    <li><a href="index-4.html">Charity Home</a></li>
-                                                    <li><a href="index-5.html">Ecology Home</a></li>
-                                                    <li><a href="index-6.html">Education Home</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Pages</a>
-                                                <ul>
-                                                    <li><a href="about.html">About Us</a></li>
-                                                    <li><a href="faq.html">FAQ’s</a></li>
-                                                    <li><a href="team.html">Meet Our Team</a></li>
-                                                    <li class="dropdown"><a href="#">Portfolio</a>
-                                                        <ul>
-                                                            <li><a href="portfolio-1.html">Style 01 - Grid View</a></li>
-                                                            <li><a href="portfolio-2.html">Style 02 - Grid View</a></li>
-                                                            <li><a href="portfolio-3.html">Style 01 - Masonry View</a></li>
-                                                            <li><a href="portfolio-4.html">Style 02 - Masonry View</a></li>
-                                                        </ul>
-                                                    </li>
-                                                    <li class="dropdown"><a href="#">Shop</a>
-                                                        <ul>
-                                                            <li><a href="shop.html">Our Products</a></li>
-                                                            <li><a href="shop-single.html">Products Single</a></li>
-                                                            <li><a href="shopping-cart.html">Shopping Cart</a></li>
-                                                            <li><a href="checkout.html">Checkout</a></li>
-                                                            <li><a href="account.html">My Account</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Causes</a>
-                                                <ul>
-                                                    <li><a href="causes-1.html">Style 01 - Grid View</a></li>
-                                                    <li><a href="causes-2.html">Style 02 - List View</a></li>
-                                                    <li><a href="causes-3.html">Style 01 - Carousel</a></li>
-                                                    <li><a href="cause-details.html">Single Cause</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown current"><a href="#">Events</a>
-                                                <ul>
-                                                    <li><a href="events-1.html">Events</a></li>
-                                                    <li><a href="event-details.html">Single Event</a></li>
-                                                </ul>
-                                            </li>
-                                            <li class="dropdown"><a href="#">Blog</a>
-                                                <ul>
-                                                    <li><a href="blog.html">Classic Grid View</a></li>
-                                                    <li><a href="blog-fullwidth.html">Fullwidth Masonry</a></li>
-                                                    <li><a href="blog-list.html">List With Sidebar</a></li>
-                                                    <li><a href="blog-details.html">Single Post</a></li>
-                                                </ul>
-                                            </li>
+                                            <li><a href="index-2.html">Home</a></li>
+                                            <li><a href="about.html">About Us</a></li>
+                                            <li><a href="causes-2.html">Causes</a></li>
+                                            <li><a href="events-1.html">Events</a></li>
+                                            <li><a href="blog.html">Blog</a></li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
@@ -326,8 +276,8 @@
                     </div>
                 </div>
                 <div class="event-block-five">
-                    <h1>Triathlon - 2019</h1>
-                    <div class="text">245 Holland Rd, Kensington, London W14 8BD, Uk <br>08 August 2019, 10.00am</div>
+                    <h1>LAUNCHING MOSQUE</h1>
+                    <div class="text">Mbale Rd, Sironko District, Uganda <br>01 September 2023, 10.00am</div>
                     <div class="link-box"><a href="#" class="theme-btn btn-style-one"><span>Donate for event</span></a><a href="#" class="theme-btn btn-style-thirteen"><span>Book for event</span></a></div>
                 </div>
             </div>
@@ -344,11 +294,11 @@
                         <div class="image"><img src="images/resource/event-1.jpg" alt=""></div>
                         <div class="lower-content">
                             <div class="date">
-                                <h1>25</h1>
-                                <div class="text"><span>August</span> <br>09.00am  - 03.00pm</div>
+                                <h1>30</h1>
+                                <div class="text"><span>September</span> <br>09.00am  - 02.00pm</div>
                             </div>
-                            <h4><a href="event-details.html">A wooden fishing boat rests on <br>deal in kent</a></h4>
-                            <div class="location"><span class="flaticon-point"></span>24, Red rose Steet, NY</div>
+                            <h4><a href="event-details.html">Feeding Orphans<br>and People in Need</a></h4>
+                            <div class="location"><span class="flaticon-point"></span>Bujoloto, Mbale, UG</div>
                         </div>
                         <div class="link-btn"><a href="#"><span class="flaticon-next-1"></span>Join With Us</a></div>
                     </div>
@@ -358,11 +308,11 @@
                         <div class="image"><img src="images/resource/event-2.jpg" alt=""></div>
                         <div class="lower-content">
                             <div class="date">
-                                <h1>16</h1>
-                                <div class="text"><span>October</span> <br>10.00am  - 12.00pm</div>
+                                <h1>02</h1>
+                                <div class="text"><span>November</span> <br>10.00am  - 12.00pm</div>
                             </div>
-                            <h4><a href="event-details.html">Cancer support – world’s biggest <br> coffee morning</a></h4>
-                            <div class="location"><span class="flaticon-point"></span>213, Derrick Street, Bos</div>                                        
+                            <h4><a href="event-details.html">Providing Basic Needs to <br>the needy in Busamaga</a></h4>
+                            <div class="location"><span class="flaticon-point"></span>Busamaga, Mbale, UG</div>                                        
                         </div>
                         <div class="link-btn"><a href="event-details.html"><span class="flaticon-next-1"></span>Join With Us</a></div>
                     </div>
@@ -372,11 +322,11 @@
                         <div class="image"><img src="images/resource/event-3.jpg" alt=""></div>
                         <div class="lower-content">
                             <div class="date">
-                                <h1>05</h1>
+                                <h1>15</h1>
                                 <div class="text"><span>November</span> <br>10.00am  - 05.00pm</div>
                             </div>
-                            <h4><a href="event-details.html">Birmingham children’s hospital <br>night-time obstacle race</a></h4>
-                            <div class="location"><span class="flaticon-point"></span>5404, Sebenth Street, la</div>
+                            <h4><a href="event-details.html">Launching A New built Mosque<br>at Nabyeya</a></h4>
+                            <div class="location"><span class="flaticon-point"></span>Nabyeya, Mbale, UG</div>
                         </div>
                         <div class="link-btn"><a href="event-details.html"><span class="flaticon-next-1"></span>Join With Us</a></div>
                     </div>
@@ -386,11 +336,11 @@
                         <div class="image"><img src="images/resource/event-8.jpg" alt=""></div>
                         <div class="lower-content">
                             <div class="date">
-                                <h1>14</h1>
+                                <h1>30</h1>
                                 <div class="text"><span>November</span> <br>10.00am  - 12.00pm</div>
                             </div>
-                            <h4><a href="event-details.html">Cancer support – world’s biggest <br> coffee morning</a></h4>
-                            <div class="location"><span class="flaticon-point"></span>213, Derrick Street, Bos</div>                                        
+                            <h4><a href="event-details.html">Launching New Borehole<br>in Pallisa</a></h4>
+                            <div class="location"><span class="flaticon-point"></span>Pallisa, UG</div>                                        
                         </div>
                         <div class="link-btn"><a href="event-details.html"><span class="flaticon-next-1"></span>Join With Us</a></div>
                     </div>
@@ -403,8 +353,8 @@
                                 <h1>22</h1>
                                 <div class="text"><span>November</span> <br>10.00am  - 05.00pm</div>
                             </div>
-                            <h4><a href="event-details.html">Birmingham children’s hospital <br>night-time obstacle race</a></h4>
-                            <div class="location"><span class="flaticon-point"></span>5404, Sebenth Street, la</div>
+                            <h4><a href="event-details.html">QURBAN</a></h4>
+                            <div class="location"><span class="flaticon-point"></span>5404, Mbale, UG</div>
                         </div>
                         <div class="link-btn"><a href="event-details.html"><span class="flaticon-next-1"></span>Join With Us</a></div>
                     </div>
@@ -417,8 +367,8 @@
                                 <h1>05</h1>
                                 <div class="text"><span>December</span> <br>09.00am  - 03.00pm</div>
                             </div>
-                            <h4><a href="event-details.html">A wooden fishing boat rests on <br>deal in kent</a></h4>
-                            <div class="location"><span class="flaticon-point"></span>24, Red rose Steet, NY</div>
+                            <h4><a href="event-details.html">Feeding Orphans <br>in Bukedea</a></h4>
+                            <div class="location"><span class="flaticon-point"></span>Bukedea, UG</div>
                         </div>
                         <div class="link-btn"><a href="#"><span class="flaticon-next-1"></span>Join With Us</a></div>
                     </div>
@@ -444,10 +394,10 @@
                     <div class="col-lg-3 col-md-6 contact-widget footer-widget">
                         <h4 class="widget-title">Contact</h4>
                         <ul>
-                            <li>5404 Berrick Street, <br> 2nd cross, <br>Boston, MA 02115.</li>
-                            <li><a href="mailto:support@goodsoul.com">supportyou@goodsoul.com </a></li>
+                            <li>Kampala Rd, <br>Mbale City, <br>Uganda</li>
+                            <li><a href="mailto:healafricanorphanscharity@gmail.com">healafricanorphanscharity@gmail.com</a></li>
                         </ul>   
-                        <h3><a href="tel:+211456789">+211 456 789</a></h3>                 
+                        <h3><a href="tel:+211456789">+256707394144</a></h3>                 
                     </div>
                     <!-- About Widget -->
                     <div class="col-lg-3 col-md-6 about-widget footer-widget">
@@ -485,7 +435,7 @@
             <div class="footer-bottom">
                 <div class="left-content">
                     <div class="icon"><img src="images/resource/logo-icon.png" alt=""></div>
-                    <div class="copyright-text"><a href="templateshub.net">Templateshub</a><a href="#">Goodsoul.</a> <br>Designed By <a href="#">Themekalia.</a></div>
+                    <div class="copyright-text"><a href="templateshub.net"></a><a href="#"></a> <br>Powered By<a href="#">healafricanorphanscharity</a></div>
                 </div>
                 <div class="right-content">
                     <ul class="social-icon-three">
